searched for .env files in the history..
PS C:\github\Domits> git log --all --pretty=format:"%H" --name-only | Select-String ".env"

Potentially sensitive files:
app/Domits/ios/.xcode.env
amplify/.config/local-env-info.json
app/Domits/amplify/.config/local-env-info.json
These files could contain environment-specific information.

I am assuming these files are safe, as they are all amplify based config files, I would like to suggest gitignoring them.

Another way is to add Gitleaks to the ci.yml workflow:
https://github.com/gitleaks/gitleaks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,17 @@ jobs:
         run: |
           cd web/src
           npm test  -- --detectOpenHandles
+
+      # Check for .env (secrets) files
+      - name: Check for .env files
+        run: |
+          if find . -name "*.env" -print | grep -q '.env'; then
+            echo "❌ .env file(s) found! Please remove them from the repository."
+# Causes build failure (exit 1)
+            exit 1
+          else
+            echo "✅ No .env files found."
+          fi
+
 env:
   REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}     
