--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -40,6 +40,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-camera": "^4.2.1",
     "react-native-document-picker": "^9.3.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
