--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -64,6 +64,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.24.7",
+    "@react-native-community/cli": "^15.1.3",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
