--- a/web/package.json
+++ b/web/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
