--- a/app/Domits/android/gradle.properties
+++ b/app/Domits/android/gradle.properties
@@ -40,8 +40,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
+# TODO Set variables on release
 # Signing configuration for release build
-MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
-MYAPP_RELEASE_KEY_ALIAS=my-key-alias
-MYAPP_RELEASE_STORE_PASSWORD=Domits123
-MYAPP_RELEASE_KEY_PASSWORD=Domits123
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=
+MYAPP_UPLOAD_STORE_PASSWORD=
+MYAPP_UPLOAD_KEY_PASSWORD=
