updates eslint config to use ignorePatterns instead of .eslintignore file

--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "lint": "eslint ../.",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!axios)/'",
