--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.20.1",
     "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.15.0"
+    "globals": "^15.15.0",
+    "typescript-eslint": "^8.24.1"
+  },
+  "scripts": {
+    "lint": "eslint ."
   }
 }
