--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -34,8 +34,10 @@
     "aws-sdk": "^2.1613.0",
     "color-convert": "^2.0.1",
     "date-fns": "^4.1.0",
+    "i18next": "^24.2.2",
     "openai": "^4.32.0",
     "react": "18.2.0",
+    "react-i18next": "^15.4.1",
     "react-native": "^0.73.10",
     "react-native-calendars": "^1.1307.0",
     "react-native-camera": "^4.2.1",
