--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -61,7 +61,8 @@
     "react-native-snap-carousel": "^1.3.1",
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "testing-library": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
