--- a/app/Domits/android/app/build.gradle
+++ b/app/Domits/android/app/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
     implementation("com.facebook.react:react-android:+")
     implementation("com.facebook.react:flipper-integration:+")
+    implementation("androidx.security:security-crypto:1.1.0-alpha06")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-engine:+")
