--- a/app/Domits/android/app/build.gradle
+++ b/app/Domits/android/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation("com.facebook.react:react-android:+")
     implementation("com.facebook.react:flipper-integration:+")
     implementation("androidx.security:security-crypto:1.1.0-alpha06")
+    implementation project(":react-native-splash-screen")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-engine:+")
