--- a/app/Domits/android/app/src/main/AndroidManifest.xml
+++ b/app/Domits/android/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
 
     <application
       android:name=".MainApplication"
+      android:theme="@style/MainSplashScreenTheme"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:allowBackup="false">
       <activity
         android:name=".MainActivity"
+        android:theme="@style/AppTheme"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
