--- a/app/Domits/android/settings.gradle
+++ b/app/Domits/android/settings.gradle
@@ -8,3 +8,6 @@ includeBuild('../node_modules/@react-native/gradle-plugin')
 // Include react-native-camera
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
+
+include ':react-native-splash-screen'
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
