--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -60,6 +60,7 @@
     "react-native-share": "^12.0.3",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-sound": "^0.11.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.3",
     "rn-fetch-blob": "^0.12.0",
     "testing-library": "^0.0.2"
