--- a/app/Domits/android/app/build.gradle
+++ b/app/Domits/android/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation("com.facebook.react:flipper-integration:+")
     implementation("androidx.security:security-crypto:1.1.0-alpha06")
     implementation project(":react-native-splash-screen")
+    implementation("androidx.core:core-splashscreen:1.0.1")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-engine:+")
