--- a/app/Domits/android/app/src/main/AndroidManifest.xml
+++ b/app/Domits/android/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
       android:name=".MainApplication"
       android:theme="@style/MainSplashScreenTheme"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/domits_app_icon"
+      android:roundIcon="@drawable/domits_app_icon"
       android:allowBackup="false">
       <activity
         android:name=".MainActivity"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.App.Starting"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
