--- a/web/package.json
+++ b/web/package.json
@@ -55,7 +55,7 @@
     "babel-jest": "^29.7.0",
     "cypress": "^13.15.0",
     "dotenv-webpack": "^8.1.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.35.2",
     "globals": "^15.9.0",
     "identity-obj-proxy": "^3.0.0",
@@ -98,6 +98,8 @@
     "graphql": "^16.9.0",
     "immer": "^10.0.4",
     "pdfjs-dist": "^2.14.305",
+    "prettier": "^3.5.1",
+    "prettier-eslint": "^16.3.0", 
     "react-chartjs-2": "^5.3.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
