--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-vector-icons": "^10.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-resizable": "^3.0.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
