--- a/web/package.json
+++ b/web/package.json
@@ -102,6 +102,7 @@
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-load-script": "^0.0.6",
+    "react-phone-input-2": "^2.15.1",
     "react-resizable": "^3.0.5",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.15.0",
