--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,40 +12,58 @@ on:
       - '1630-sonarqube-setup-in-github-cipipeline'
 
 jobs:
-  sonarqube:
-    name: SonarQube
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   tests:
     runs-on: ubuntu-latest
     env:
-      REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}  # Moved here
+      REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Install NPM dependencies, cache them correctly
+      # Install and Cache NPM dependencies
       - name: Install dependencies
         run: |
           cd web/src
           npm ci --verbose
 
-      # Run your Cypress tests
+      # Run Jest tests with coverage
+      - name: Run Jest tests
+        run: |
+          cd web/src
+          npm test -- --coverage
+
+      # Run Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           working-directory: web/src/tests
           start: npx vite --host
 
-      # Run Jest tests
-      - name: Run Jest tests
-        run: |
-          cd web/src
+      # Upload Jest coverage report as an artifact (so SonarQube can use it)
+      - name: Save Jest Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: jest-coverage
+          path: web/src/coverage/lcov.info
+
+  sonarqube:
+    name: SonarQube
+    runs-on: ubuntu-latest
+    needs: tests  # Wait for tests to finish before running SonarQube
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # Download the Jest coverage report
+      - name: Download Jest Coverage Report
+        uses: actions/download-artifact@v3
+        with:
+          name: jest-coverage
+          path: web/src/coverage
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
