--- a/web/.gitignore
+++ b/web/.gitignore
@@ -36,6 +36,7 @@ yarn-error.log*
 # amplify-do-not-edit-begin
 amplify/#current-cloud-backend
 amplify/.config/local-*
+amplify
 amplify/logs
 amplify/mock-data
 amplify/mock-api-resources
