--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.7",
+    "eslint": "^9.23.0",
     "ip": "^2.0.1",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
