--- a/web/package.json
+++ b/web/package.json
@@ -99,12 +99,14 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.9.0",
     "immer": "^10.0.4",
+    "leaflet": "^1.9.4",
     "pdfjs-dist": "^2.14.305",
     "prettier": "^3.5.1",
     "prettier-eslint": "^16.3.0",
     "react-chartjs-2": "^5.3.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-leaflet": "^4.2.1",
     "react-load-script": "^0.0.6",
     "react-phone-input-2": "^2.15.1",
     "react-resizable": "^3.0.5",
