--- a/web/package.json
+++ b/web/package.json
@@ -63,6 +63,8 @@
     "jest": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "stylelint": "^16.18.0",
+    "stylelint-config-standard": "^38.0.0",
     "typescript-eslint": "^8.4.0"
   },
   "author": "",
