--- a/app/Domits/package.json
+++ b/app/Domits/package.json
@@ -40,6 +40,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.4.1",
     "react-native": "^0.73.10",
+    "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1307.0",
     "react-native-camera": "^4.2.1",
     "react-native-document-picker": "^9.3.1",
