--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.7",
     "ip": "^2.0.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.510.0",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^4.10.38",
     "react-icons": "^5.4.0",
