--- a/web/package.json
+++ b/web/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^6.23.1",
     "stylelint": "^16.18.0",
     "stylelint-config-standard": "^38.0.0",
+    "typescript": "^5.0.2",
     "typescript-eslint": "^8.4.0"
   },
   "author": "",
