--- a/web/package.json
+++ b/web/package.json
@@ -101,6 +101,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.9.0",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "immer": "^10.0.4",
     "lucide-react": "^0.503.0",
     "node-fetch": "^2.7.0",
@@ -110,6 +112,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4",
+    "react-i18next": "^15.5.1",
     "react-load-script": "^0.0.6",
     "react-phone-input-2": "^2.15.1",
     "react-resizable": "^3.0.5",
