--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
       - 'acceptance'
       - 'main'
       - '1630-sonarqube-setup-in-github-cipipeline'
+      - 'Repository-Restructuring'
     paths:
       - 'frontend/**'
 
