--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,20 +23,20 @@ jobs:
       # Install and Cache NPM dependencies
       - name: Install dependencies
         run: |
-          cd web/src
+          cd frontend/web/src
           npm ci --verbose
 
       # Run Jest tests with coverage
       - name: Run Jest tests
         run: |
-          cd web/src
+          cd frontend/web/src
           npm test -- --coverage --coverageDirectory=coverage
 
       # Run Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          working-directory: web/src/tests
+          working-directory: frontend/web/src/tests
           start: npx vite --host
 
 #  sonarqube:
